local: only run debian tasks on debian systems

--- a/debian/local.yml
+++ b/debian/local.yml
@@ -13,24 +13,46 @@
             daemon_reload: yes
 
   tasks:
-      - name: Update all packages
-        apt:
-            update_cache: yes
-            upgrade: dist
+      # --- Debian Specific System Tasks ---
+      - name: Debian System Setup
+        block:
+            - name: Update all packages
+              ansible.builtin.apt:
+                  update_cache: yes
+                  upgrade: dist
+
+            - name: Install essential tools
+              ansible.builtin.apt:
+                  name:
+                      - git
+                      - curl
+                      - htop
+                      - npm
+                      - nodejs
+                      - vim
+                      - code
+                  state: present
+
+            - name: Copy udev rules
+              ansible.builtin.copy:
+                  src: ./configs/udev/
+                  dest: /etc/udev/rules.d/
+                  owner: root
+                  group: root
+                  mode: '0644'
+              notify: Reload systemd
+
+            - name: Enable and start essential services
+              ansible.builtin.systemd:
+                  name: '{{ item }}'
+                  enabled: yes
+                  state: started
+              loop:
+                  - ssh
+              ignore_errors: yes
         when: ansible_os_family == "Debian"
 
-      - name: Install essential tools
-        package:
-            name:
-                - git
-                - curl
-                - htop
-                - npm
-                - nodejs
-                - vim
-                - code
-            state: present
-
+      # --- Cross-Platform / User Config Tasks ---
       - name: Ensure .bash_aliases is sourced in .bashrc
         ansible.builtin.blockinfile:
             path: '{{ ansible_env.HOME }}/.bashrc'
@@ -83,24 +105,3 @@
         become: no
         changed_when: false
         ignore_errors: yes
-
-      - name: Copy udev rules
-        ansible.builtin.copy:
-            src: ./configs/udev/
-            dest: /etc/udev/rules.d/
-            owner: root
-            group: root
-            mode: '0644'
-        notify: Reload systemd
-
-      - name: Enable and start essential services
-        ansible.builtin.systemd:
-            name: '{{ item }}'
-            enabled: yes
-            state: started
-        loop:
-            - ssh
-        ignore_errors: yes
-
-      - name: Run system maintenance
-        ansible.builtin.shell: source {{ ansible_env.HOME }}/.bashrc && maintenance
